@@ -1,4 +1,5 @@
 clasp 3.2.3:
+  * fixed regression in enum mode "domRec" in case of complementary atoms
   * fixed spurious backtracking on integrating sat clauses from theory propagator
   * fixed regression: model heuristic ("--opt-heuristic=2") not applied
   
